# fakenews_repo

./: .gitignore  .python-version  Makefile  README.md  data.ipynb  dockerfile  main.py  model_prediction.py  pyproject.toml  requirements.in  requirements.ini  requirements.txt
airflow/: Dockerfile  docker-compose.yaml  docker-compose2.yaml  requirements_docker.txt
api/: app.py
bert_data_prediction/: bert_fakenews.ipynb  model_prediction.py
bert_data_prediction /: bert_fakenews.ipynb
dataextraction/: newspaper3k.py
datapredection_new/: model_prediction.py
dataprediction/: bert_fakenews.ipynb  model_prediction.py  train_model.py
fake-news/: .env  docker-compose.yaml
ias/: cloudbuild.yaml  firewall.tf  main.tf  provider.tf  tfplan  variables.tf
local_test/: main.py  reddit_api.py  scrapping_news.py
notebooks/: bert_fakenews.ipynb
redditAPI/: data.ipynb  getdata.py
service/: reddit_api.py  scrapping_news.py
src/: pyproject.toml  requirements.txt
src/api/: app.py  test.py
src/dataprediction/: model_prediction.py
src/dataprediction/Notebooks/results/runs/Apr08_09-26-53_artefact-de-vm-hadjmohamed/: events.out.tfevents.1744104420.artefact-de-vm-hadjmohamed.621840.0
src/dataprediction/Notebooks/results/runs/Apr08_09-59-09_artefact-de-vm-hadjmohamed/: events.out.tfevents.1744106350.artefact-de-vm-hadjmohamed.7284.0
src/dataprediction/Notebooks/tokenizer/: tokenizer.json
src/dataprediction/model/: keras_metadata.pb  saved_model.pb
src/dataprediction/model/variables/: variables.index
src/dataprediction/tokenizer/: tokenizer_config.json
(+44 files in other folders)
