[project]
name = "nlp-fakenews"
version = "0.1.0"
description = "Use of NLP to determine if a news is fake or not"
authors = [
    {name = "Mohamed Hadj",email = "hadj.tmohamed@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "openai (>=1.69.0,<2.0.0)",
    "scrapy (>=2.12.0,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "newspaper3k (>=0.2.8,<0.3.0)",
    "lxml-html-clean (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
