[project]
name = "dataprediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohamed Hadj",email = "hadj.tmohamed@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.setuptools]
packages = ["dataprediction"]

[tool.setuptools.package-dir]
my_package = "src/dataprediction"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
